# kwak

./: Dockerfile  LICENSE  Makefile  README.md  kwak.sh  pyproject.toml
.devcontainer/: devcontainer.json
queries/: create_chunk_embeddings.sql  create_dossiers.sql
src/kwak/: cli.py
src/kwak/schemas/: dossier.py
src/kwak/services/: factories.py
src/kwak/services/chunkers/: base.py  semantic.py  word_count.py
src/kwak/services/completions/: base.py  ollama.py  openai.py
src/kwak/services/embedding/: base.py  ollama.py  openai.py
src/kwak/services/generators/: base.py  ollama.py  openai.py
src/kwak/services/rag/: retrieval.py
src/kwak/utils/: files.py
